<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginStart="20dp"
            android:src="@drawable/home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/home"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/_21_22_23_asdasdasdasd"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/home" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:hint="@string/search_food_nearby"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:startIconDrawable="@drawable/search">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/filter" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/happy_deals"
        android:textColor="#3d3e4e"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relish_a_big_binge_with_our_best_offers"
        android:textColor="#7a7a7a"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient1"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rescued_food"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saving_food_and_hunger"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/a"
                    android:textColor="@color/white" />

            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/img1">

            </com.google.android.material.imageview.ShapeableImageView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient2"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/laaaarge_discounts"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:text="@string/saving_food_and_hunger"
                    android:textColor="@color/white" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img2">

            </ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient3"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/laaaarge_discounts"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:text="@string/saving_food_and_hunger"
                    android:textColor="@color/white" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img3">

            </ImageView>
        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclusive_on_fastfood"
        android:textColor="#3d3e4e"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relish_a_big_binge_with_our_best_offers"
        android:textColor="#7a7a7a"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    </TextView>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="150dp"
            android:layout_height="100dp">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="#F44336"
                app:cardCornerRadius="20dp"

                app:cardElevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_marginTop="-15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/kfc_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:text="@string/up_to_30_off"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/q"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="150dp"
            android:layout_height="100dp">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="#E38A08"
                app:cardCornerRadius="20dp"

                app:cardElevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_marginTop="-15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/kfc_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:text="@string/up_to_30_off"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/q"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="150dp"
            android:layout_height="100dp">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="#FF9800"
                app:cardCornerRadius="20dp"

                app:cardElevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_marginTop="-15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/kfc_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:text="@string/up_to_30_off"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/q"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:padding="15dp"
            android:src="@drawable/icon1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:padding="15dp"
            android:src="@drawable/icon2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tint="#FF9800"
        <ImageView
            android:padding="15dp"
            android:src="@drawable/icon3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:padding="15dp"
            android:src="@drawable/icon4"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>